--- a/manifests/operators/monitor-cf.yml
+++ b/manifests/operators/monitor-cf.yml
@@ -23,23 +23,24 @@
   value:
     name: firehose
     azs:
-      - z1
+      - ((az2))
     instances: 1
-    vm_type: default
+    vm_type: ((vm_type))
     stemcell: default
     networks:
-      - name: default
+      - name: ((network))
     jobs:
       - name: firehose_exporter
         release: prometheus
         properties:
           firehose_exporter:
             doppler:
+              url: wss://doppler.((system_domain)):((traffic_controller_external_port))
               subscription_id: "((metrics_environment))"
               max_retry_count: 300
             logging:
               url: wss://doppler.((system_domain)):((traffic_controller_external_port))
-              use_legacy_firehose: true
+              use_legacy_firehose: false
             uaa:
               url: https://uaa.((system_domain))
               client_id: firehose_exporter
@@ -69,3 +70,25 @@
 - type: replace
   path: /instance_groups/name=grafana/jobs/name=grafana/properties/grafana/prometheus/dashboard_folders/name=Prometheus?/files/-
   value: /var/vcap/jobs/cloudfoundry_dashboards/prometheus*.json
+
+- type: replace
+  path: /instance_groups/name=prometheus2/jobs/name=prometheus2/properties/prometheus/scrape_configs/-
+  value:
+    job_name: firehose_exporter
+    static_configs:
+    - targets:
+      - 172.16.25.149:9186
+
+- type: replace
+  path: /instance_groups/name=prometheus2/jobs/name=prometheus2/properties/prometheus/scrape_configs/-
+  value:
+    job_name: cf_exporter
+    static_configs:
+    - targets:
+      - 172.16.25.145:9193
+
+- type: remove
+  path: /instance_groups/name=prometheus2/jobs/name=prometheus2/properties/prometheus/scrape_configs/job_name=cf
+
+- type: remove
+  path: /instance_groups/name=prometheus2/jobs/name=prometheus2/properties/prometheus/scrape_configs/job_name=firehose
