--- a/manifests/operators/monitor-cf.yml
+++ b/manifests/operators/monitor-cf.yml
@@ -39,7 +39,7 @@
               subscription_id: "((metrics_environment))"
               max_retry_count: 300
             logging:
-              url: wss://doppler.((system_domain)):((traffic_controller_external_port))
+              url: https://log-stream.((system_domain))
               use_legacy_firehose: false
             uaa:
               url: https://uaa.((system_domain))
