--- a/manifests/operators/monitor-cf.yml
+++ b/manifests/operators/monitor-cf.yml
@@ -29,6 +29,7 @@
     stemcell: default
     networks:
       - name: ((network))
+        static_ips : [((firehose_ip_address))]
     jobs:
       - name: firehose_exporter
         release: prometheus
@@ -77,7 +78,7 @@
     job_name: firehose_exporter
     static_configs:
     - targets:
-      - 172.16.25.149:9186
+      - ((firehose_ip_address)):9186
 
 - type: replace
   path: /instance_groups/name=prometheus2/jobs/name=prometheus2/properties/prometheus/scrape_configs/-
@@ -85,7 +86,7 @@
     job_name: cf_exporter
     static_configs:
     - targets:
-      - 172.16.25.145:9193
+      - ((prometheus2_ip_address)):9193
 
 - type: remove
   path: /instance_groups/name=prometheus2/jobs/name=prometheus2/properties/prometheus/scrape_configs/job_name=cf
